5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1582_1331.log
== TEST (2019-03-12 17:30:14) 
-- CODE:
print(50/3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:17) 
-- CODE:
print(50//3)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:32:03) 
-- CODE:
print(50//3%1)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:32:09) 
-- CODE:
print(50//3%1)
-- EXECUTION TIME:
0.149049
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:02) 
-- CODE:
print(50//3(%2))
-- ERROR:
File "XXXX", line 1
    print(50//3(%2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:50) 
-- CODE:
print(50//3 50$%4)
-- ERROR:
File "XXXX", line 1
    print(50//3 50$%4)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:55) 
-- CODE:
print(50//3 50%4)
-- ERROR:
File "XXXX", line 1
    print(50//3 50%4)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:34:15) 
-- CODE:
print(50//3)
print(2%1)
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:34:25) 
-- CODE:
print(50//3)
print(2%1)
-- EXECUTION TIME:
0.116734
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:34:42) 
-- CODE:
print(50//3)
print(2)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:34:46) 
-- CODE:
print(50//3)
print(2)
-- EXECUTION TIME:
0.168493
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
